Apache Synapse Enterprise Service Bus (ESB) - 1.1.1 Release Notes - January 2008

1. Overview
    The Apache Synapse ESB is a robust, lightweight and highly scalable and distributed
    Enterprise Service Bus (ESB). It supports SOAP Web services as well as Legacy services over
    transports such as JMS, Apache VFS File systems, Mail etc, and SOAP, REST/POX, plain text
    and binary message payloads.

    Apache Synapse graduated from the Apache Incubator on the 2nd of January 2007, and the first
    Synapse 1.0 was released on the 11th of June 2007. On the 20th of December 2007, Synapse was
    accepted as a top level project (TLP) under the Apache Software Foundation.

2. Installation Prerequisites 

    Apache Synapse requires a J2SE runtime of version 1.5.x or later and Apache Ant to run the samples.
    Synapse requires JDK 1.5.x at runtime as it uses a NIO based https implementation, that is only
    possible with a JDK 1.5.x or later. To build Synapse from source, you will need JDK 1.5.x, and
    Apache Maven 2.0.6 or later

3. Quick start
    Please see the docs/Synapse_Quickstart.html guide

4. Building the Samples
    Please see the documents docs/Synapse_Samples.html and docs/Synapse_Samples_Setup.html

5. Synapse configuration language
    Please see the document docs/Synapse_Configuration_Language.html

6. Extending Synapse
    Please see the document docs/Synapse_Extending.html
    
7. Known Issues and limitations

  * SYNAPSE-180 Does not support the ability to throttle by concurrency within a cluster
  * SYNAPSE-174 The non-blocking http/s transports cannot handle WS-RM requests
  * SYNAPSE-186 Does not support PUT/DELETE rest operations
  * SYNAPSE-215 XSLTMediator doesn't handle text output correctly
  * SYNAPSE-212 XSLTMediator doesn't close/delete temporary files properly

  * The Synapse JMS implementation supports JMS 1.0.2b, however due to licensing issues we include