@@ -32,7 +32,7 @@
 
     <groupId>org.apache.synapse</groupId>
     <artifactId>Apache-Synapse</artifactId>
-    <version>1.1.1</version>
+    <version>1.1.2</version>
 
     <name>Apache Synapse</name>
     <description>Apache Synapse</description>
@@ -1049,7 +1049,7 @@
 
     <properties>
         <!-- Synapse and related components -->
-        <synapse.version>1.1.1</synapse.version>
+        <synapse.version>1.1.2</synapse.version>
         <httpcore.nio.version>4.0-beta1</httpcore.nio.version>
         <commons.dbcp.version>1.2.2</commons.dbcp.version>
         <commons.pool.version>1.3</commons.pool.version>
