@@ -1,4 +1,4 @@
-Apache Synapse 1.1.1 build  (January 2008) - http://ws.apache.org/synapse/
+Apache Synapse 1.1.2 build  (February 2008) - http://ws.apache.org/synapse/
 ------------------------------------------------------------------------------------------
 
 -------------------
